# Traceon

./: .gitignore  CMakeLists.txt  README.md
data/: report.json  report.xml  trace_data.csv  trace_data.json
docs/phases/phase 1/: decoding_error_rules.md  decoding_rules.md  logic_notes.md  phase_1_core_analyzer.md  tlp_structure + rules.md  validation_rule_registry.md
docs/phases/phase 2/: phase 2(GUI visualization layer).md  phase_2_gui_visualization.md
docs/phases/phase 3/: phase 3(Automation & scripting).md  phase_3_automation_scripting.md
docs/phases/phase 4/: phase 4(Concurrency & live data processing).md  phase_4_concurrency_live_data.md
docs/phases/phase 5/: phase 5(TLM & virtual sytem integration).md  phase_5_tlm_virtual_system.md
docs/phases/phase 6/: phase 6(Error Injection).md  phase_6_error_injection.md
docs/phases/phase 7/: phase 7(Multi protocol & cross domain).md  phase_7_multi_protocol_cross_domain.md
documents/: current_working-doc.md
documents/phases/phase 1/: logic_notes.md  phase 1(core PICe analyzer).md  tlp_header_attr_extraction.md  tlp_structure + rules.md
src/: CMakeLists.txt  main.cpp
src/analyzer-engine/: CMakeLists.txt
src/analyzer-engine/include/analyzer-engine/: analyzer_engine.h
src/analyzer-engine/include/analyzer-engine/core/packet/: packet.h
src/analyzer-engine/include/analyzer-engine/core/tlp/: tlp.h
src/analyzer-engine/include/analyzer-engine/decoder/: decode_error.h  packet_decoder.h
src/analyzer-engine/include/analyzer-engine/input-layer/: input_exception.h  input_layer.h
src/analyzer-engine/include/analyzer-engine/report-builder/: report_builder.h
src/analyzer-engine/include/analyzer-engine/utils/: utils.h
src/analyzer-engine/include/analyzer-engine/validator/: protocol_validator.h  validation_error.h
src/analyzer-engine/src/: analyzer_engine.cpp
src/analyzer-engine/src/core/packet/: packet.cpp
src/analyzer-engine/src/core/tlp/: tlp.cpp
src/analyzer-engine/src/decoder/: packet_decoder.cpp
src/analyzer-engine/src/input-layer/: input_exception.cpp  input_layer.cpp
src/analyzer-engine/src/report-builder/: report_builder.cpp
src/analyzer-engine/src/utils/: utils.cpp
src/analyzer-engine/src/validator/: protocol_validator.cpp
src/analyzer-engine/tests/: CMakeLists.txt
src/analyzer-engine/tests/system/: test_analyzer_engine.cpp
src/analyzer-engine/tests/unit/: test_input_layer.cpp  test_packet_decoder.cpp  test_protocol_validator.cpp  test_report_builder.cpp
src/backend/: CMakeLists.txt
src/backend/Utils/: Utils.cpp  Utils.h
src/backend/core/TLP/: TLP.h
src/backend/core/packet/: Packet.cpp  Packet.h  packet.cpp  packet.h
src/backend/core/tlp/: tlp.cpp  tlp.h
src/backend/decoder/: packet_decoder.cpp  packet_decoder.h
src/backend/include/backend/core/packet/: packet.h
src/backend/include/backend/core/tlp/: tlp.h
src/backend/include/backend/decoder/: packet_decoder.h
src/backend/include/backend/utils/: utils.h
src/backend/src/core/packet/: packet.cpp
src/backend/src/core/tlp/: tlp.cpp
src/backend/src/decoder/: packet_decoder.cpp
src/backend/src/utils/: utils.cpp
src/backend/utils/: utils.cpp  utils.h
src/cli-parser/: CMakeLists.txt
src/cli-parser/include/cli-parser/: cli_parser.h
src/cli-parser/src/: cli_parser.cpp
src/gui/: CMakeLists.txt
src/gui/include/gui/: gui_placeholder.h
src/gui/src/: gui_placeholder.cpp
